Criação da página de pesquisa

--- a/cadastro.html
+++ b/cadastro.html
@@ -14,6 +14,10 @@
     <form class="container">
         <h1>Gerenciamento de Patrimônio</h1>
         <div class="input-block">
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" id="nome">
+        </div>
+        <div class="input-block">
             <label for="login">Login:</label>
             <input type="text" name="login" id="login">
         </div>
@@ -21,8 +25,8 @@
             <label for="password">Senha:</label>
             <input type="password" name="password" id="password">
         </div>
-        <button>Entrar</button>
-        <a href="cadastro.html">Cadastrar-se</a>
+        <button>Cadastrar</button>
+        <a href="index.html">Voltar</a>
     </form>
 </body>
 
