Adicionado link para teste

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <button>Entrar</button>
         <a href="cadastro.html">Cadastrar-se</a>
+        <a href="pesquisar_equipamento.html">Teste</a>
     </form>
 </body>
 
