--- a/pesquisar_equipamento.html
+++ b/pesquisar_equipamento.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>GP - Gerenciamento de patrimônio</title>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/pesquisar_equipamento.css">
+    <title>GP - Gerenciamento de patrimônio</title>
+    <script src="functions.js"></script>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/partials/menu.css">
+    <link rel="stylesheet" href="styles/pesquisar_equipamento.css">
 </head>
 
 <body>
@@ -38,7 +40,7 @@
                 <label for="patrimonio">Patrimônio:</label>
                 <input type="text" name="patrimonio" id="patrimonio">
             </div>
-            <button>Pesquisar</button>
+            <button onclick="pesquisar()">Pesquisar</button>
         </form>
     </div>
 </body>
