--- a/pesquisar_equipamento.html
+++ b/pesquisar_equipamento.html
@@ -20,7 +20,7 @@
     </label>
     <nav class="menu">
         <ul>
-            <a href="#">
+            <a href="cadastrar_equipamento.html">
                 <li>Cadastrar equipamento</li>
             </a>
             <a href="#">
